Revision history for beacon2-cbi-tools

2.0.9  2025-XX-XX

    - Added docs
    - Made STDOUT friendlier with UTF-8 emoji (turn off via --no-emoji)
    - Restored defaults to: mem=8GB, tmpdir=/tmp, dbnsfpset=all

2.0.8  2025-03-22

    - The CRG FTP site has reached end-of-life after three years of availability
      - External files moved to a new location; download script updated accordingly
      - External datasets are now downloaded outside the container, simplifying data persistence
    - Repository renamed to 'beacon2-cbi-tools' ([C]NAG [B]iomedical [I]nformatics)
    - Repository transferred to @CNAG-Biomedical-Informatics organization
    - Added support for arm64 (Apple Silicon / M-based Macs) architectures
    - 'mongosh' is now installed via apt
    - Updated Dockerfile
    - BEACON => BFF-TOOLS:
      - 'lib/BEACON/ => 'lib/BFF', 'Beacon.pm' => 'Tools.pm'
      - 'mongodb' mode renamed to 'load'
      - Added 'validate' mode runs 'utils/bff_validator/bff-validator'
      - Now accepts pre-annotated VCFs using `annotate: false` in YAML configuration (requires mandatory ANN fields)
      - Added an 'examples' directory featuring hg38 (GRCh38)
      - Added spinner for interactive execution of 'bin/beacon'
      - Added basic tests in 't/' directory
      - Internal scripts moved from 'lib/BEACON/bin/' to 'lib/internal/{complete,partial}/'
      - Updated 'bin/config.yaml' with placeholder `{base}`
      - Added $version, $java, and $arch information to 'log.json'
      - Updated tools versions:
        - 'bcftools': 1.15.1 -> 1.21-103
        - 'mongo-database-tools': ubuntu2004-100.5.1 -> ubuntu2204-100.9.4
        - 'ClinVar' from clinvar_20211218* to clinvar_20250312*
      - VCF2BFF:
        - Renamed lib/*/.pm
        - Added t/ and debugging mode 'bff-pretty'
        - Now reads 'annotatedWith' from external 'config.yaml' (fixed typo: toolreferences.dbSNSFP -> dbNSFP)
        - Added Sequence Ontology (SO) terms for calculated variant consequences: